Add tag deletion/addition filters for conflict resolution page (#919)
* add tag deletion/addition filters

* spelling error

* fix filtering

* updates

* use deleted_tags field

* test

* deletion empty case fix

* use alert template tag; add icon template tag

* use == instead of is for numerical comparison

* reuse tag queryset for each field instead of multiple queries

---------

Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/lit/templates/lit/conflict_resolution.html
+++ b/hawc/apps/lit/templates/lit/conflict_resolution.html
@@ -11,9 +11,7 @@
     </li>
     {% empty %}
     <li class="list-group-item">
-        <div class="alert alert-success">
-            <i class='fa fa-fw fa-check mr-1'></i>&nbsp;Conflict resolution complete! No conflicts to resolve.
-        </div>
+        {% alert warning %}{% icon "fa-exclamation-triangle" %}No conflicts found.{% endalert %}
     </li>
     {% endfor %}
 </ul>
