move documentation navigation

--- a/hawc/templates/includes/sidebar.html
+++ b/hawc/templates/includes/sidebar.html
@@ -64,28 +64,15 @@
     </li>
     {% endif %}
 
-    {% load wagtailcore_tags %}
-    {% wagtail_site as doc_site %}
-    {% with doc_root_page=doc_site.root_page %}
-    {% if doc_root_page.live %}
-    <li class="{{li_class}}">
-        <a class="{{a_class}}" href="{% pageurl doc_root_page %}">{{ doc_root_page.title }}</a>
+    {% if user.is_authenticated %}
         {% if expand_docs %}
-        {% with doc_child_pages=doc_root_page.get_children.live %}
-        {% if doc_child_pages %}
-        <ul class="{{sub_ul}}">
-            {% for doc_child_page in doc_child_pages %}
+            {% include 'docs/components/sidebar_docs_tree.html' %}
+        {% else %}
             <li class="{{li_class}}">
-                <a class="{{a_class}}" href="{% pageurl doc_child_page %}">{{ doc_child_page.title }}</a>
+                <a class="{{a_class}}" href="{% url 'wagtail_serve' '' %}">HAWC Documentation</a>
             </li>
-            {% endfor %}
-        </ul>
         {% endif %}
-        {% endwith %}
-        {% endif %}
-    </li>
     {% endif %}
-    {% endwith %}
 
     <li class="{{li_class}}"><a class="{{a_class}}" href="{% url 'about' %}">About HAWC</a></li>
     <li class="{{li_class}}"><a class="{{a_class}}" href="{% url 'resources' %}">HAWC Resources</a></li>
