--- a/hawc/templates/includes/_navigation_links.html
+++ b/hawc/templates/includes/_navigation_links.html
@@ -8,9 +8,11 @@
 <li class="nav-item">
     <a class="nav-link" href="{% url 'resources' %}">Resources</a>
 </li>
+{% if user.is_authenticated %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'wagtail_serve' '' %}">Docs</a>
 </li>
+{% endif %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'assessment:public_list' %}">Public Assessments</a>
 </li>
