--- a/hawc/templates/includes/_navigation_links.html
+++ b/hawc/templates/includes/_navigation_links.html
@@ -10,7 +10,7 @@
 </li>
 {% if user.is_authenticated %}
 <li class="nav-item">
-    <a class="nav-link" href="{% url 'wagtail_serve' '' %}">Docs</a>
+    <a class="nav-link" href="{% url 'wagtail_serve' '' %}">Documentation</a>
 </li>
 {% endif %}
 <li class="nav-item">
