updates from multi user testing

--- a/hawc/apps/docs/templates/docs/base.html
+++ b/hawc/apps/docs/templates/docs/base.html
@@ -10,7 +10,7 @@
 
 {% block content_row_outer %}
 {{ block.super }}
-{% if user.is_staff %}{% wagtailuserbar %}{% endif %}
+{% wagtailuserbar %}
 {% endblock content_row_outer %}
 
 {% block sidebar_outer %}
