optimize page cache

--- a/hawc/apps/docs/templates/docs/blocks/table_of_contents.html
+++ b/hawc/apps/docs/templates/docs/blocks/table_of_contents.html
@@ -1,12 +1,14 @@
+{% load wagtailcore_tags %}
+
 <h3>{{value.child_header}}</h3>
 <ul>
     {% if value.show_all_descendants %}
         {% for child in page.toc_descendants %}
-            <li style="margin-left: {{child.indent_offset}}em"><a href="{{ child.url }}">{{ child.title }}</a></li>
+            <li style="margin-left: {{child.indent_offset}}em"><a href="{% pageurl child %}">{{ child.title }}</a></li>
         {% endfor %}
     {% else %}
         {% for child in page.toc_children %}
-            <li><a href="{{ child.url }}">{{ child.title }}</a></li>
+            <li><a href="{% pageurl child %}">{{ child.title }}</a></li>
         {% endfor %}
     {% endif %}
 </ul>
