--- a/hawc/apps/docs/templates/docs/components/sidebar_docs_tree.html
+++ b/hawc/apps/docs/templates/docs/components/sidebar_docs_tree.html
@@ -1,16 +1,15 @@
-{% load cache wagtailcore_tags %}
+{% load wagtailcore_tags %}
 
-{% cache 60 docs %}
 {% wagtail_site as doc_site %}
-{% with doc_root_page=doc_site.root_page  %}
-{% with doc_child_pages=doc_root_page.get_children.live %}
+{% with root=doc_site.root_page %}
+{% with children=root.specific.toc_children %}
 <li class="{{li_class}}">
-    <a class="{{a_class}}" href="{% pageurl doc_root_page %}">{{ doc_root_page.title }}</a>
-    {% if doc_child_pages %}
+    <a class="{{a_class}}" href="{% pageurl root %}">{{root.title}}</a>
+    {% if children %}
     <ul class="{{sub_ul}}">
-        {% for doc_child_page in doc_child_pages %}
+        {% for page in children %}
         <li class="{{li_class}}">
-            <a class="{{a_class}}" href="{% pageurl doc_child_page %}">{{ doc_child_page.title }}</a>
+            <a class="{{a_class}}" href="{% pageurl page %}">{{page.title}}</a>
         </li>
         {% endfor %}
     </ul>
@@ -18,4 +17,3 @@
 </li>
 {% endwith %}
 {% endwith %}
-{% endcache docs %}
