--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -807,11 +807,9 @@ table.bordered td {
     opacity: 0;
     transition: opacity 500ms ease-in;
 }
-.htmx-request .htmx-indicator{
-    opacity:1
-}
-.htmx-request.htmx-indicator{
-    opacity:1
+.htmx-request .htmx-indicator,
+.htmx-request.htmx-indicator {
+    opacity: 1
 }
 
 /* fade in/out */
